LAB9: ObservabilityService, web/http.main/additional.statsComputation timers, @EnableScheduling